styles/components/Gallery.module.scss
@import "../../theme/theme";

.gallery_container { 
  position: absolute;
  height: calc(100% - 100px); 
  width: 100vw; 
  overflow-y: scroll; 
  overflow-x: hidden; 
  background-color: $light 
}
  .gallery_inner_container {
    position: relative;
    width: 100%;
    height: 100%;
  }

    @media (max-width: 455px) { // mobile
      .gallery_filter_menu {
        width: 100% !important;
        border-bottom-left-radius: 0px !important;
        border-left: None !important;
      }
    }
    @media (max-width: 800px) { // mobile
      .gallery_filter_menu_tooltip {
        display: none;
      }
      .gallery_filter_menu_toggle {
        position: fixed;
        top: 50px;
        right: 150px;
        width: 50px;
        height: 50px; 
        color: $light !important;
        background-color: $dark !important;
        border-top-right-radius: 5px;
        border-top-left-radius: 5px;
      }
        .gallery_filter_menu_toggle_icon {
          width: 50px !important;
          height: 50px !important;
          padding: 5px;
          border-top-right-radius: 5px;
        }

      .gallery_filter_menu_toggle_open {
        position: fixed;
        top: 50px;
        right: 150px;
        width: 50px;
        height: 50px; 
        color: $dark !important;
        background-color: $light !important;
        border-top-right-radius: 5px;
        border-top-left-radius: 5px;
        z-index: 1;
      }
      .gallery_filter_menu {
        position: fixed; 
        top: 100px; 
        right: 0px;
        min-height: 50px;
        max-width: 100vw !important;
        border-bottom-left-radius: 7px;
        z-index: 1;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        border-bottom: 2px solid $secondary;
        border-left: 2px solid $secondary;
      }
      .gallery_filter_menu > .gallery_filter_icon_container:first-of-type {
        border-bottom-left-radius: 5px !important;
      }

      .gallery_filter_icon_container {
        width: 50px;
        height: 50px;
        background-color: $dark;
        color: $light;
      }
      .gallery_filter_icon_container_selected {
        width: 50px;
        height: 50px;
        background-color: $light !important;
        color: $dark !important;
      }
        .gallery_filter_icon {
          width: 40px !important;
          height: 40px !important;
          margin: 5px;
        }
    }
    @media (min-width: 799px) { // browser
      .gallery_filter_menu_toggle {
        position: fixed;
        top: 50px;
        right: 150px;
        width: fit-content;
        height: 50px; 
        color: $light !important;
        background-color: $dark !important;
        border-top-right-radius: 5px;
        border-top-left-radius: 5px;
        display: flex;
        flex-direction: row;
      }
      .gallery_filter_menu_toggle:hover {
        background-color: $light !important;
        color: $dark !important;
      }
        .gallery_filter_menu_toggle_icon {
          width: 50px !important;
          height: 50px !important;
          padding: 5px;
          border-top-right-radius: 5px;
        }
      .gallery_filter_menu_toggle_open {
        position: fixed;
        top: 50px;
        right: 150px;
        width: fit-content;
        height: 50px; 
        color: $light !important;
        background-color: $dark !important;
        border-top-right-radius: 5px;
        border-top-left-radius: 5px;
        display: flex;
        flex-direction: row;
        z-index: 1;
      }
      .gallery_filter_menu_toggle_open > .gallery_filter_menu_toggle_icon:hover {
        background-color: $light !important;
        color: $dark !important;
      }
      .gallery_filter_menu_tooltip {
        position: relative; 
        width: fit-content;
        font-size: 24px;
        line-height: 50px;
        margin-right: 5px;
        margin-left: 10px;
      }
      .gallery_filter_menu_container { 
        position: relative; 
        width: fit-content; 
      }
      .gallery_filter_menu {
        position: relative; 
        width: fit-content; 
        min-height: 50px;
        background-color: $light; 
        z-index: 1;
        display: flex;
        flex-direction: row;
        border-top-left-radius: 5px !important;
      }
      .gallery_filter_menu > .gallery_filter_icon_container:first-of-type {
        border-top-left-radius: 4px !important;
      }

      .gallery_filter_icon_container {
        width: 50px;
        height: 50px;
        color: $light;
        background-color: $dark !important;
      }
      .gallery_filter_icon_container:hover {
        background-color: $light !important;
        color: $dark !important;
      }
      .gallery_filter_icon_container_selected {
        width: 50px;
        height: 50px;
        background-color: $light !important;
        color: $dark;
      }
        .gallery_filter_icon {
          width: 40px !important;
          height: 40px !important;
          margin: 5px;
        }
    }



  .gallery_body { 
    min-height: calc(100% - 100px); 
    width: 100vw; 
  }
    .piece_container { 
      position: absolute; 
      padding: 5px; 
      border-radius: 3px; 
      background-color: $secondary;
    }
      .piece_secondary_container { 
        padding: 0;
      }
        .piece_image_container { 
          position: relative; 
        }
          .piece_image { 
            padding: 0;
          }
          
        .piece_sold_container { 
          position: absolute; 
          bottom: 10px !important; 
          right: 10px 
        }
          .piece_sold { 
            position: absolute !important; 
            bottom: 0px !important; 
            right: 0px !important; 
            top: auto !important; 
            left: auto !important; 
          }

